[package]
name = "cktap-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-cktap = { path = "../lib", features = ["pcsc"] }
pcsc = { version = "2" }
clap = { version = "4.3.1", features = ["derive"] }
rpassword = { version = "7.2" }
tokio = { version = "1", features = ["full"] }

thiserror = "2.0"
parking_lot = "0.12"
eyre = "0.6"

[features]
default = ["emulator"]
emulator = ["rust-cktap/emulator"]
